add DEBUG option

--- a/MakeFiles/linux/Makefile
+++ b/MakeFiles/linux/Makefile
@@ -1,4 +1,3 @@
-# $Id$
 #
 # Makefile for building RNTrack in Linux
 #
@@ -21,27 +20,43 @@
 #    Target platform architecture. On default x86_64 is used
 # STATIC=1
 #    Link RNtrack staticly. Implies USE_MUSL=1
+# DEBUG=1
+#    Build a debug version of the executable
 
 PREFIX = /usr
 STATIC ?= 0
 USE_MUSL ?= 0
 USE_CLANG ?= 0
 ARCH ?= x86_64
+DEBUG ?= 0
 
 ifeq ($(STATIC), 1)
     USE_MUSL = 1
 endif
 
 SMAPIDIR := ../../smapi
-ifeq ($(USE_MUSL), 1)
-    CC := $(ARCH)-linux-musl-g++
-    CFLAGS := -O3 -Wall -fPIC -fno-rtti -I../../hpp -I../../src -I$(SMAPIDIR)/h -I$(SMAPIDIR)/src
-else ifeq ($(USE_CLANG), 1)
-    CC := clang++
-    CFLAGS := -O3 -Wall -Wextra -ferror-limit=0 -fPIC -fno-rtti -I../../hpp -I../../src -I$(SMAPIDIR)/h -I$(SMAPIDIR)/src
+ifeq ($(DEBUG),0)
+    ifeq ($(USE_MUSL), 1)
+        CC := $(ARCH)-linux-musl-g++
+        CFLAGS := -O3 -Wall -fPIC -fno-rtti -I../../hpp -I../../src -I$(SMAPIDIR)/h -I$(SMAPIDIR)/src
+    else ifeq ($(USE_CLANG), 1)
+        CC := clang++
+        CFLAGS := -O3 -Wall -Wextra -ferror-limit=0 -fPIC -fno-rtti -I../../hpp -I../../src -I$(SMAPIDIR)/h -I$(SMAPIDIR)/src
+    else
+        CC := g++
+        CFLAGS := -O3 -Wall -fPIC -fno-rtti -I../../hpp -I../../src -I$(SMAPIDIR)/h -I$(SMAPIDIR)/src
+    endif
 else
-    CC := g++
-    CFLAGS := -O3 -Wall -fPIC -fno-rtti -I../../hpp -I../../src -I$(SMAPIDIR)/h -I$(SMAPIDIR)/src
+    ifeq ($(USE_MUSL), 1)
+        CC := $(ARCH)-linux-musl-g++
+        CFLAGS := -g -O2 -Wall -fPIC -fno-rtti -I../../hpp -I../../src -I$(SMAPIDIR)/h -I$(SMAPIDIR)/src
+    else ifeq ($(USE_CLANG), 1)
+        CC := clang++
+        CFLAGS := -g -O2 -Wall -Wextra -ferror-limit=0 -fPIC -fno-rtti -I../../hpp -I../../src -I$(SMAPIDIR)/h -I$(SMAPIDIR)/src
+    else
+        CC := g++
+        CFLAGS := -g -O2 -Wall -fPIC -fno-rtti -I../../hpp -I../../src -I$(SMAPIDIR)/h -I$(SMAPIDIR)/src
+    endif
 endif
 
 ifeq ($(ARCH), i486)
@@ -53,11 +68,21 @@ endif
 CDEFS = -Dunix -D__linux__ -DHAVE_UNISTD_H -DHAVE_FCNTL_H -DHAVE_MALLOC_H \
         -DHAVE_STRING_H -DHAVE_TIME_H -DHAVE_SYS_TIME_H -DHAVE_UTIME_H \
         -DHAVE_LOCALE_H
-ifeq ($(STATIC), 1)
-    LFLAGS := -s -static -pie -z text -L$(SMAPIDIR) -lsmapilnx
+
+ifeq ($(DEBUG), 0)
+    ifeq ($(STATIC), 1)
+        LFLAGS := -s -static -pie -z text -L$(SMAPIDIR) -lsmapilnx
+    else
+        LFLAGS := -s -L$(SMAPIDIR) -lsmapilnx
+    endif
 else
-    LFLAGS := -s -L$(SMAPIDIR) -lsmapilnx
+    ifeq ($(STATIC), 1)
+        LFLAGS := -static -pie -z text -L$(SMAPIDIR) -lsmapilnx
+    else
+        LFLAGS := -L$(SMAPIDIR) -lsmapilnx
+    endif
 endif
+
 SRCDIR = ../../src/
 DOCDIR = ../../doc/
 #CONFIG = /etc/ftn/rntrack.cfg
@@ -67,7 +92,7 @@ ENABLE_SCRIPTS ?= 0
 ENABLE_LOG_PID ?= 0
 ENABLE_SYSLOG_LOG_FORMAT ?= 0
 
-ifeq ($(ENABLE_SCRIPTS), 1)
+ifeq ($(ENABLE_SCRIPTS),1)
 #    CFLAGS += $(shell perl -MConfig -e 'my @v=split(/\./,"$$]"); print "-D__PERL_VERSION__=".join("",@v)." -D__PERL_MAJOR__=$$v[0] -D__PERL_MINOR__=$$v[1] $$Config{ccdlflags} ", join(" ",grep(!/(^$|-fstack-protector|-fno-strict-aliasing|-Wdeclaration-after-statement)/,split(" ",$$Config{ccflags}))), " -I$$Config{archlibexp}/CORE"')
 #    CFLAGS += $(shell perl -MConfig -e 'my @v=split(/\./,"$$]"); print "-D__PERL_VERSION__=".join("",@v)." -D__PERL_MAJOR__=$$v[0] -D__PERL_MINOR__=$$v[1] ", join(" ",grep(!/(^$|-fno-strict-aliasing|-Wdeclaration-after-statement)/,split(" ",$$Config{ccflags}))), " -I$$Config{archlibexp}/CORE"')
     CFLAGS += $(shell perl -MConfig -e 'my @v=split(/\./,"$$]"); print "-D__PERL_VERSION__=".join("",@v)." -D__PERL_MAJOR__=$$v[0] -D__PERL_MINOR__=$$v[1] ", join(" ",grep(!/(^$$|-Wdeclaration-after-statement|-fstack-clash-protection|redhat-hardened-cc1|redhat-annobin-cc1)/,split(" ",$$Config{ccflags}))), " -I$$Config{archlibexp}/CORE"')
@@ -122,16 +147,17 @@ OBJS= \
 	wildmat.o
 
 %.o: $(SRCDIR)%.c
-	$(CC) $(CFLAGS) $(CDEFS) $(COPT) -c $<
+	$(CC) $(CFLAGS) $(CDEFS) -c $<
 
 %.o: $(SRCDIR)%.cpp
-	$(CC) $(CFLAGS) $(CDEFS) $(COPT) -c $<
+	$(CC) $(CFLAGS) $(CDEFS) -c $<
 
 #$(SRCDIR)cfg.cpp: $(SRCDIR)cfg.y
 #	bison -l -d $< -o $(SRCDIR)cfg.cpp
 
 smapi:
-	make -C $(SMAPIDIR) -f makefile.lnx USE_MUSL=$(USE_MUSL) ARCH=$(ARCH) USE_CLANG=$(USE_CLANG)
+	make -C $(SMAPIDIR) -f makefile.lnx USE_MUSL=$(USE_MUSL) ARCH=$(ARCH) \
+		USE_CLANG=$(USE_CLANG) DEBUG=$(DEBUG)
 
 rntrack: smapi $(OBJS)
 	$(CC) -o rntrack $(OBJS) $(LFLAGS)
