fix djgpp build

--- a/MakeFiles/djgpp/Makefile
+++ b/MakeFiles/djgpp/Makefile
@@ -69,18 +69,21 @@ OBJS= \
 	wildmat.o
 
 %.o: $(SRCDIR)%.c
-	$(CC) $(CFLAGS) $(CDEFS) -c $<
+	@echo Compiling $<
+	@$(CC) $(CFLAGS) $(CDEFS) -c $<
 
 %.o: $(SRCDIR)%.cpp
-	$(CC) $(CFLAGS) $(CDEFS) -c $<
+	@echo Compiling $<
+	@$(CC) $(CFLAGS) $(CDEFS) -c $<
 
 # Thunderbirds are go!
 
 smapi:
-	make -C $(SMAPIDIR) -f makefile.djg
+	make -C $(SMAPIDIR) -f makefile.djg static
 
 rntrack: smapi $(OBJS)
-	$(CC) -o rntrack$(EXEEND) $(OBJS) $(LFLAGS)
+	@echo Compiling rntrack$(EXEEND)
+	@$(CC) -o rntrack$(EXEEND) $(OBJS) $(LFLAGS)
 
 clean:
 	-del $(SMAPIDIR1)\\*.o
