--- a/MakeFiles/emx/Makefile.emx
+++ b/MakeFiles/emx/Makefile.emx
@@ -7,15 +7,15 @@
 
 CC=	gcc
 
-PERL=D:/PERLLIB/LIB/5.00553/os2
+PERL=../../../perl5.00553/os2
 
 SMAPIDIR= ../../smapi
-CFLAGS=	-Wall -fno-rtti -s -g
+CFLAGS= -Wall -fno-rtti -s -g
 CDEFS=	-DOS2 -DEMX -DDO_PERL -DDOSISH -DEMBED -DHAVE_UNISTD_H -DHAVE_IO_H -DHAS_strupr -DHAVE_LOCALE_H -DHAVE_TIME_H -DHAVE_UTIME_H
-COPT=	-I../../hpp -I../../.. -I$(SRCDIR) -I$(SMAPIDIR)/h -I$(SMAPIDIR)/src -I$(PERL)/CORE -O3
+COPT=  -I../../hpp -I$(SMAPIDIR)/h -I$(PERL)/CORE -O3
 SRCDIR= ../../src/
-LFLAGS=	-Zcrtdll -L$(SMAPIDIR) -lsmapiemx -g
-EXEEND= _os2.exe
+LFLAGS= -Zcrtdll -L$(SMAPIDIR) -lsmapiemx -g -lstdcxx
+EXEEND= _emx.exe
 STRIP=	-s
 
 ALL: rntrack$(EXEEND)
@@ -57,29 +57,35 @@ OBJS= \
 	wildmat.o
 
 PERLLIBS=\
-        $(PERL)/auto/DB_File/DB_File.a \
-        $(PERL)/auto/SDBM_File/SDBM_File.a \
-        $(PERL)/auto/Fcntl/Fcntl.a \
-        $(PERL)/auto/IO/IO.a \
-        $(PERL)/auto/POSIX/POSIX.a \
-        $(PERL)/auto/Socket/Socket.a \
-        $(PERL)/auto/OS2/Process/Process.a \
-        $(PERL)/auto/OS2/ExtAttr/ExtAttr.a \
-        $(PERL)/auto/OS2/REXX/REXX.a \
-        $(PERL)/auto/DynaLoader/DynaLoader.a \
+	$(PERL)/auto/DB_File/DB_File.a \
+	$(PERL)/auto/SDBM_File/SDBM_File.a \
+	$(PERL)/auto/Fcntl/Fcntl.a \
+	$(PERL)/auto/IO/IO.a \
+	$(PERL)/auto/POSIX/POSIX.a \
+	$(PERL)/auto/Socket/Socket.a \
+	$(PERL)/auto/OS2/Process/Process.a \
+	$(PERL)/auto/OS2/ExtAttr/ExtAttr.a \
+	$(PERL)/auto/OS2/REXX/REXX.a \
+	$(PERL)/auto/DynaLoader/DynaLoader.a \
 	-L$(PERL)/CORE -llibperl -lsocket -lm -lbsd -ldb
 
-%.o: %.c
-	$(CC) $(CFLAGS) $(CDEFS) $(COPT) -c $<
+%.o: $(SRCDIR)%.c
+	@echo Compiling $<
+	@$(CC) $(CFLAGS) $(CDEFS) $(COPT) -c $<
 
 %.o: $(SRCDIR)%.cpp
-	$(CC) $(CFLAGS) $(CDEFS) $(COPT) -c $<
+	@echo Compiling $<
+	@$(CC) $(CFLAGS) $(CDEFS) $(COPT) -c $<
 
 # Thunderbirds are go!
 
+smapi:
+	make -C $(SMAPIDIR) -f makefile.emx
 
-rntrack$(EXEEND): $(OBJS)
-	$(CC) $(STRIP) -o rntrack$(EXEEND) $(OBJS) $(LFLAGS) $(PERLLIBS)
+rntrack$(EXEEND): smapi $(OBJS)
+	@echo Compiling rntrack$(EXEEND)
+#	 @$(CC) $(STRIP) -o rntrack$(EXEEND) $(OBJS) $(LFLAGS) $(PERLLIBS)
+	$(CC) $(STRIP) -o rntrack$(EXEEND) $(OBJS) $(LFLAGS)
 
 clean:
 	-del *.o
