--- a/smapi/makefile.emx
+++ b/smapi/makefile.emx
@@ -8,12 +8,14 @@ CC	= gcc
 CFLAGS	= -Wall -Zcrtdll
 CDEFS	= -D__OS2__
 COPT	= -O3 -fomit-frame-pointer -fstrength-reduce -funsigned-char -s
+CINCL	= -I$(HDIR)
 AR	= ar
 AR_R	= r
 RM	= cmd /c del
 OBJ	= .o
 LIB	= .a
 EXE	= .exe
+C	= .c
 
 TARGET	= smapiemx$(LIB)
 
@@ -21,17 +23,19 @@ EXENAMEFLAG = -o
 
 # Thunderbirds are go!
 
-default: all
+default: $(TARGET)
 
 include makefile.inc
 
-.c$(OBJ):
-	$(CC) $(CFLAGS) $(CDEFS) $(COPT) -c $<
+%$(OBJ): $(SRCDIR)%$(C)
+	@echo Compiling $<
+	@$(CC) $(CFLAGS) $(CDEFS) $(COPT) $(CINCL) -c $<
 
 all:  $(TARGET) gnmsgid$(EXE)
 
 $(TARGET): $(OBJS)
-	$(AR) $(AR_R) $@ $?
+	@echo Create $(TARGET)
+	@$(AR) $(AR_R) $@ $?
 
 gnmsgid$(EXE): gnmsgid$(OBJ)
 	$(CC) $(CFLAGS) $(COPT) $(EXENAMEFLAG) gnmsgid$(EXE) gnmsgid$(OBJ) $(LOPT) $(TARGET)
